--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 131 – Dynamic Web Fundamentals – Kyle Naumann</title>
+    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals course homepage for Kyle Naumann, featuring assignments, projects, and web development fundamentals.">
+    <meta name="author" content="Kyle Naumann">
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
+        <nav>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/kyle-naumann/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://byupw.instructure.com/" target="_blank">Canvas</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7" target="_blank">Scripture</a></li>
+                <li><a href="#" target="_blank">Final Project</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Kyle Naumann</h1>
+
+        <div class="card-container">
+            <section class="card">
+                <h2>About Me</h2>
+                <img src="images/kyle-profile.jpg" alt="Kyle Naumann Profile Picture" width="300" height="200">
+                <p>Welcome to my WDD 131 site. I'm Kyle, and I'm taking on web development as part of expanding my skill set. After years in other fields, I've decided to dive into coding - better late than never, right? There's something really satisfying about building functional websites from the ground up.</p>
+                <p>I'm approaching this with the perspective that comes from experience - I know what good user interfaces should feel like, and now I'm learning how to actually build them. The combination of technical problem-solving and creative design really appeals to me.</p>
+            </section>
+
+            <section class="card">
+                <h2>Course Projects</h2>
+                <img src="images/web-development.jpg" alt="Web Development Projects" width="300" height="200">
+                <p>This section will showcase the projects I'm working on throughout the course. Each assignment is a chance to apply what I'm learning and tackle real-world development challenges. I'm finding that the best way to really understand these concepts is to get my hands dirty and build something tangible.</p>
+                <p>From responsive layouts to interactive JavaScript features, I'm documenting my progress as I develop these skills. It's interesting to see how each project builds on the previous ones, creating a solid foundation in modern web development practices.</p>
+            </section>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; <span id="currentyear"></span> Kyle Naumann, California</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
