--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>WDD 131 – Dynamic Web Fundamentals – Kyle Naumann</title>
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals course homepage for Kyle Naumann, featuring assignments, projects, and web development fundamentals.">
     <meta name="author" content="Kyle Naumann">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
