updated to fix all of the audit problems

--- a/temples.html
+++ b/temples.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="#" id="header-home">Temple Album</a></h1>
+        <div class="site-title"><a href="#" id="header-home">Temple Album</a></div>
         <button id="hamburger-btn">&#9776;</button>
         <nav>
             <ul id="nav-menu">
@@ -32,52 +32,52 @@
         <h1>Sacred Temples</h1>
         <div id="temple-gallery">
             <figure class="temple-card" data-category="old large">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Salt Lake Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Salt Lake Temple" loading="lazy">
                 <figcaption>Salt Lake Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="old large">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Manti Utah Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Manti Utah Temple" loading="lazy">
                 <figcaption>Manti Utah Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="old large">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Logan Utah Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Logan Utah Temple" loading="lazy">
                 <figcaption>Logan Utah Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="new large">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Rome Italy Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Rome Italy Temple" loading="lazy">
                 <figcaption>Rome Italy Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="new small">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Cedar City Utah Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Cedar City Utah Temple" loading="lazy">
                 <figcaption>Cedar City Utah Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="new small">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Pocatello Idaho Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Pocatello Idaho Temple" loading="lazy">
                 <figcaption>Pocatello Idaho Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="old small">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="St. George Utah Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="St. George Utah Temple" loading="lazy">
                 <figcaption>St. George Utah Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="new large">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Payson Utah Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Payson Utah Temple" loading="lazy">
                 <figcaption>Payson Utah Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="new small">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Brigham City Utah Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Brigham City Utah Temple" loading="lazy">
                 <figcaption>Brigham City Utah Temple</figcaption>
             </figure>
 
             <figure class="temple-card" data-category="old large">
-                <img src="images/brigham_city_utah_temple_dawn.jpeg" alt="Provo City Center Temple" loading="lazy">
+                <img src="images/brigham-temple.jpg" alt="Provo City Center Temple" loading="lazy">
                 <figcaption>Provo City Center Temple</figcaption>
             </figure>
         </div>
