--- a/place.html
+++ b/place.html
@@ -36,7 +36,7 @@
                     type="image/webp">
             <!-- Fallback for browsers that don't support WebP -->
             <img src="images/yellowstone-fallback.jpg"
-                 alt="Stunning view of Yellowstone's Old Faithful geyser and geothermal features in pristine wilderness"
+                 alt="Overhead view of a vibrant colorful geothermal pool in yellowstone national park"
                  class="hero-image"
                  width="1200"
                  height="800">
