--- a/project/form.html
+++ b/project/form.html
@@ -22,6 +22,11 @@
                     <label for="product-name">Product Name:</label>
                     <select id="product-name" name="product-name" required>
                         <option value="" disabled selected>Select a Product ...</option>
+                        <option value="smart-doorbell">Smart Doorbell Pro</option>
+                        <option value="security-camera">Security Camera System</option>
+                        <option value="smart-lock">Smart Lock Plus</option>
+                        <option value="motion-sensor">Motion Sensor Kit</option>
+                        <option value="smart-thermostat">Smart Thermostat</option>
                     </select>
                 </div>
 
