Actually fixing things

--- a/form.html
+++ b/form.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Form</title>
-    <meta name="description" content="Submit a product review for kyleis.fun">
+    <meta name="description" content="Share your product experience with our comprehensive review form. Rate smart home products, provide detailed feedback, and help other customers make informed purchasing decisions.">
+    <meta name="author" content="Kyle Naumann">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
 </head>
 <body>
@@ -123,6 +127,6 @@
         <p>Created for WDD 131 - Web Frontend Development</p>
     </footer>
 
-    <script src="scripts/form.js"></script>
+    <script src="scripts/form.js" defer></script>
 </body>
 </html>
