--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Form</title>
-    <meta name="description" content="Share your product experience with our comprehensive review form. Rate smart home products, provide detailed feedback, and help other customers make informed purchasing decisions.">
+    <meta name="description" content="Rate and review smart home products with our comprehensive form. Share your experience to help other customers make informed decisions.">
     <meta name="author" content="Kyle Naumann">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -126,7 +126,6 @@
         <p>&copy; 2026 Kyle Naumann</p>
         <p>Created for WDD 131 - Web Frontend Development</p>
     </footer>
-
-    <script src="scripts/form.js" defer></script>
+<script src="scripts/form.js" defer></script>
 </body>
 </html>
