--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Site Plan - Kyle</title>
     <meta name="description" content="Site planning document for Kyle's portfolio website">
+    <meta name="author" content="Kyle Naumann">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/siteplan.css">
 </head>
 <body>
