updated meta name

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Kyle Naumann" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Site Plan - Kyle</title>
     <meta name="description" content="Site planning document for Kyle's portfolio website">
     <meta name="author" content="Kyle Naumann">
