--- a/project/portfolio.html
+++ b/project/portfolio.html
@@ -23,7 +23,6 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href="about.html">about/contact</a></li>
                     <li><a href="portfolio.html">portfolio</a></li>
-                    <li><a href="art.html">art</a></li>
                 </ul>
             </nav>
         </div>
@@ -52,7 +51,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="../images/temple-placeholder.jpg" alt="Temple Information Site" loading="lazy">
+                        <img src="../images/brigham-temple.jpg" alt="Temple Information Site" loading="lazy">
                     </div>
                     <div class="portfolio-content">
                         <h3>Temple Information Site</h3>
@@ -69,7 +68,7 @@
 
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="../images/place-placeholder.jpg" alt="Place Information Page" loading="lazy">
+                        <img src="../images/yellowstone-medium.webp" alt="Place Information Page" loading="lazy">
                     </div>
                     <div class="portfolio-content">
                         <h3>Place Information Page</h3>
@@ -86,7 +85,7 @@
 
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="../images/form-placeholder.jpg" alt="Review System" loading="lazy">
+                        <img src="../images/web-development.jpg" alt="Review System" loading="lazy">
                     </div>
                     <div class="portfolio-content">
                         <h3>Review & Form System</h3>
